@@ -235,6 +235,8 @@ struct obj *otmp;
 		break;
 	case WAN_OPENING:
 	case SPE_KNOCK:
+	    {
+       	        struct trap *trap;
 		wake = FALSE;	/* don't want immediate counterattack */
 		if (u.uswallow && mtmp == u.ustuck) {
 			if (is_animal(mtmp->data)) {
@@ -242,6 +244,18 @@ struct obj *otmp;
 				else pline("%s opens its mouth!", Monnam(mtmp));
 			}
 			expels(mtmp, mtmp->data, TRUE);
+		} else if (mtmp->mtrapped && 
+			   (trap = t_at(mtmp->mx, mtmp->my)) != 0 &&
+			   trap->ttyp == BEAR_TRAP) {
+
+		    mtmp->mtrapped = 0;
+		    if (canseemon(mtmp)) {
+			pline("%s beartrap opens releasing %s.", 
+			      (trap->madeby_u ? "Your" : "The"), 
+			      mon_nam(mtmp));
+		    }
+		    reward_untrap(trap, mtmp);
+
 #ifdef STEED
 		} else if (!!(obj = which_armor(mtmp, W_SADDLE))) {
 			mtmp->misc_worn_check &= ~obj->owornmask;
@@ -253,6 +267,7 @@ struct obj *otmp;
 			newsym(mtmp->mx, mtmp->my);
 #endif
 		}
+	    }
 		break;
 	case SPE_HEALING:
 	case SPE_EXTRA_HEALING:
@@ -2167,9 +2182,14 @@ boolean ordinary;
 		    damage = 0;	/* reset */
 		    break;
 		case WAN_OPENING:
-		    if (Punished) makeknown(WAN_OPENING);
+		    if (Punished || u.utraptype == TT_BEARTRAP) 
+			makeknown(WAN_OPENING);		    
 		case SPE_KNOCK:
 		    if (Punished) Your("chain quivers for a moment.");
+		    if (u.utraptype == TT_BEARTRAP) {
+			pline_The("bear trap opens.");
+			u.utrap = 0;
+		    }
 		    break;
 		case WAN_DIGGING:
 		case SPE_DIG:
@@ -2426,6 +2446,9 @@ struct obj *obj;	/* wand or spell */
 			on_level(&u.uz, &qstart_level) && !ok_to_quest()) {
 		pline_The("stairs seem to ripple momentarily.");
 		disclose = TRUE;
+	    } else if (u.utraptype == TT_BEARTRAP) {
+		pline_The("bear trap opens.");
+		u.utrap = 0;
 	    }
 	    break;
 	case WAN_STRIKING:
