@@ -11,6 +11,7 @@
 	* Tree Cutting v1.0 by Michael Lehotay ( http://bilious.alt.org/?67 )
 	* More interesting wizard quest (vampires, home with trees and less square clouds)
 	* YAFM for dragons sitting on objects (based on work by Jordan DeLong - see bilious.alt.org/?193)
+	* Improved Beartraps 1.0 by Malcolm Ryan ( http://bilious.alt.org/?143 )
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
